 # Fixed issue [#20226] Recursion in some circumstances when reinstalling (Elin Waring, Christophe Demko).
 # Fixed issue [#20516] [patch] Hathor fixes (Andy Tarr, Airton Torres).
 # Fixed issue [#20302] com_config application view loads a duplicate of switcher javascript (Phil Snell).
 
24-May-2010 Jean-Marie Simonet
# [#20580] Fatal error when saving module and editing "Publish Start" or "Publish Finish". Thanks Radek.
# [#20569] mod_login.xml manifest cites incorrect index file. Thanks Jeremy.
# [#20545] Possible to delete all usergroups, can't do anything after that. Thanks Radek.
# [#20313] com_messages.messages search query. Thanks Phill.
$ Consolidated some strings
#+ [#20528] Inconsistency in user groups [sample data]. Tree rebuilding. Thanks Christophe.
# [#20533] Fatal error "Call to undefined method JAdministrator::getLanguageFilter()" when enabling search logging + "Show Search Results". Thanks Denis and Christophe.
+ [#20592] Add sample data positions to Atomic. Thanks Elin.
# [#20607] "witdh" instead of "width" in mod_banners default template. Thanks Michael.
# [#20600] New user does not set user group for new user (Back-end). Thanks Andrew.
# [#20439] article count always zero. Thanks Christopher.

23-May-2010 Mark Dexter
# Sample data fixes (Elin Waring)

23-May-2010 Jean-Marie Simonet
[#20568] Update publish time on front end. Thanks Michael.
[#20465] Notice: Undefined property: stdClass::$author_name on many pages. Thanks Bill.
$ Completing some language strings

22-May-2010 Jean-Marie Simonet
$ [#20564] Inconsistence between userS and user view
# [#20469] Notice: Trying to get property of non-object in /components/com_weblinks/views/form/tmpl/edit.php on line 47
# [#20486] Published date not being generated
# [#20511] Database error prevents installation (PHP strict)
$ Adding missing string. Sorting some main ini strings.
# [#20556] Home menu items are routed with alias if language switcher plugin is off. Thanks Dennis