@@ -37,6 +37,7 @@ $ -> Language fix or change
  # Fixed issue [#20226] Recursion in some circumstances when reinstalling (Elin Waring, Christophe Demko).
  # Fixed issue [#20516] [patch] Hathor fixes (Andy Tarr, Airton Torres).
  # Fixed issue [#20302] com_config application view loads a duplicate of switcher javascript (Phil Snell).
+ # Fixed issue [#20619] Global configuration allows you to save an invalid email (Elin Waring).
  
 24-May-2010 Jean-Marie Simonet
 # [#20580] Fatal error when saving module and editing "Publish Start" or "Publish Finish". Thanks Radek.
